:rocket: Endpoint to retrieve list contents
